<resources>
    <string name="app_name">SandwichCollectors</string>
    <string name="alle_liste">Accedi alle tue liste</string>
    <string name="vai_area_scambio">Accedi all\'area di scambio</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_hello_my_drawer">HelloMyDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="nome_e_cognome">Nome e cognome</string>
    <string name="nome_figurina">Nome Figurina</string>
    <string name="squadra">Squadra</string>
    <string name="num_fig">N°</string>
    <string name="quantita">Quantità</string>
    <string name="possedute">Ne hai:</string>
    <string name="salva">Salva</string>
    <string name="updating_success">La quantità posseduta è stata aggiornata</string>
    <string name="database_error">Errore di inserimento</string>
    <string name="totale">TOTALE</string>
    <string name="mancanti">MANCA</string>
    <string name="celo">CELO</string>
</resources>
